RESOLVED FIXED214242
Building NetworkSessionCocoa.mm with the macOS Big Sur public SDK fails
https://bugs.webkit.org/show_bug.cgi?id=214242
Summary Building NetworkSessionCocoa.mm with the macOS Big Sur public SDK fails
Rob Buis
Reported 2020-07-12 14:39:24 PDT
Building NetworkSessionCocoa.mm with the macOS Big Sur public SDK fails because _allowsHTTP3 is readonly.
Attachments
Patch (1.49 KB, patch)
2020-07-12 14:44 PDT, Rob Buis
no flags
Rob Buis
Comment 1 2020-07-12 14:44:03 PDT
EWS
Comment 2 2020-07-12 23:20:05 PDT
Committed r264292: <https://trac.webkit.org/changeset/264292> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404118 [details].
Radar WebKit Bug Importer
Comment 3 2020-07-12 23:21:14 PDT
Note You need to log in before you can comment on or make changes to this bug.