Building NetworkSessionCocoa.mm with the macOS Big Sur public SDK fails https://bugs.webkit.org/show_bug.cgi?id=214242

Patch by Rob Buis <rbuis@igalia.com> on 2020-07-12
Reviewed by Darin Adler.

Building NetworkSessionCocoa.mm with the macOS Big Sur public SDK fails
because _allowsHTTP3 is readonly yet it is being written to in
NetworkSessionCocoa.mm, mark it as readwrite instead.

* pal/spi/cf/CFNetworkSPI.h:

Canonical link: https://commits.webkit.org/227057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264292 268f45cc-cd09-0410-ab3c-d52691b4dbfc